--- a/index.html
+++ b/index.html
@@ -348,10 +348,9 @@
       <div class="content has-text-centered">
         <div class="notification is-info is-light" style="text-align: justify;">
           <p>
-            <strong>Note: All the fragments above are obtained from real scans. </strong>
-            Even when encountering unfamiliar fragments, and even if some parts are missing, GARF can still flawlessly
-            assemble them and precisely align their pose. Try rotating and zooming in on the 3D models to observe how
-            seamlessly they fit together!
+            <strong>Note: All fragments shown above are obtained from real 3D scans. 
+            Even when presented with unfamiliar fragments or missing parts, GARF successfully assembles them and accurately aligns their poses. 
+            Try rotating and zooming in on the 3D models to see how seamlessly the pieces fit together!All the fragments above are obtained from real scans. </strong>
           </p>
         </div>
       </div>
