--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                       style="width: 100%; height: 200px; background-color: #f7f7f7; border-radius: 8px; position: relative;">
           <div
               style="position: absolute; bottom: 10px; right: 10px; background-color: rgba(0,0,0,0.3); color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">
-            plate
+            Plate
           </div>
         </model-viewer>
       </div>
@@ -312,7 +312,7 @@
                       style="width: 100%; height: 200px; background-color: #f7f7f7; border-radius: 8px; position: relative;">
           <div
               style="position: absolute; bottom: 10px; right: 10px; background-color: rgba(0,0,0,0.3); color: white; padding: 2px 8px; border-radius: 4px; font-size: 12px;">
-            pot
+            Pot
           </div>
         </model-viewer>
       </div>
@@ -348,9 +348,9 @@
       <div class="content has-text-centered">
         <div class="notification is-info is-light" style="text-align: justify;">
           <p>
-            <strong>Note: All fragments shown above are obtained from real 3D scans. 
+            <strong>Note: All fragments shown above are obtained from real 3D scans. </strong>
             Even when presented with unfamiliar fragments or missing parts, GARF successfully assembles them and accurately aligns their poses. 
-            Try rotating and zooming in on the 3D models to see how seamlessly the pieces fit together!All the fragments above are obtained from real scans. </strong>
+            Try rotating and zooming in on the 3D models to see how seamlessly the pieces fit together!All the fragments above are obtained from real scans. 
           </p>
         </div>
       </div>
