--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-full-width">
 
-        <h2 class="title is-4">Fractura Dataset (synthetic)</h2>
+        <h2 class="title is-4">Fractura Dataset (Synthetic Fracture Subset)</h2>
         <div class="content has-text-justified">
           <p>
             Following the simulated fracture method used in Breaking Bad, we also performed simulated breakage on the
