--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <b>GARF</b> leverages fracture-aware pretraining to learn fracture features from individual fragments, with
             flow matching enabling precise 6-DoF alignments. At inference time, we introduce one-step preassembly,
             improving robustness to unseen objects and varying numbers of fractures. In collaboration with
-            archaeologists, paleoanthropologists, and ornithologists, we curate <b>FRACTUNA</b>, a diverse dataset for
+            archaeologists, paleoanthropologists, and ornithologists, we curate <b>FRACTURA</b>, a diverse dataset for
             vision and learning communities, featuring real-world fracture types across ceramics, bones, eggshells, and
             lithics. Comprehensive experiments have shown our approach consistently outperforms state-of-the-art methods
             on both synthetic and real-world datasets, achieving 82.87% lower rotation error and 25.15% higher part
