--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <br>
             <span class="author-block" style="font-size: large">*, † Equal Contribution, </span>
-            <span class="author-block" style="font-size: large">✉ corresponding Author</span>
+            <span class="author-block" style="font-size: large">✉ Corresponding Author</span>
           </div>
 
           <div class="column has-text-centered" style="margin-top: 1em;">
