--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                  target="_blank">Chen Feng<sup>1✉</sup></a>,
             </span>
             <span class="author-block">
-              <a href="https://jingz6676.github.io" target="_blank">Jing Zhang<sup>1✉</sup></a>,</span>
+              <a href="https://jingz6676.github.io" target="_blank">Jing Zhang<sup>1✉</sup></a></span>
           </div>
 
           <div class="is-size-5 publication-authors">
@@ -808,9 +808,8 @@
 <section class="section" id="Acknowledgements">
   <div class="container is-max-desktop content">
     <h2 class="title">Acknowledgements</h2>
-    We gratefully acknowledge the Physical Anthropology Unit, Universidad Complutense de Madrid for providing access to
-    the human skeletons under their curation. This work was supported in part through NSF grants 2152565, 2238968,
-    2322242, and 2426993, and the NYU IT High Performance Computing resources, services, and staff expertise.
+    We gratefully acknowledge the Physical Anthropology Unit, Universidad Complutense de Madrid for access to curated human skeletons, and Dr. Scott A. Williams (NYU Anthropology Department) for the processed data samples. 
+    This work was supported in part through NSF grants 2152565, 2238968, 2322242, and 2426993, and the NYU IT High Performance Computing resources, services, and staff expertise.
   </div>
 </section>
 
