update from arxiv

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                  target="_blank">Kristof Zyskowski<sup>2</sup></a>,</span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=lo1VSPUAAAAJ&hl=en"
-                 target="_blank">Shannon McPherron<sup>3</sup></a>,</span>
+                 target="_blank">Shannon P. McPherron<sup>3</sup></a>,</span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=JqLHsvYAAAAJ&hl=en"
                  target="_blank">Radu Iovita<sup>1</sup></a>,</span>
@@ -154,7 +154,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block" style="margin-right: 1.5em;"> <sup>1</sup>New York University</span>
             <span class="author-block" style="margin-right: 1.5em;"> <sup>2</sup>Yale University</span>
-            <span class="author-block" style="margin-right: 1em;"> <sup>3</sup>Max Planck Institute</span>
+            <span class="author-block" style="margin-right: 1em;"> <sup>3</sup>Max Planck Institute for Evolutionary Anthropology</span>
 
             <br>
             <span class="author-block" style="font-size: large">*, † Equal Contribution, </span>
@@ -175,7 +175,7 @@
               </span>
               <span class="link-block">
               <!-- add here later. -->
-              <a href="https://arxiv.org/abs/2412.00138" target="_blank"
+              <a href="https://arxiv.org/abs/2504.05400" target="_blank"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -200,7 +200,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (Coming Soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
               <span class="link-block">
@@ -793,11 +793,11 @@
         <button id="copyButton" onclick="copyToClipboard()">
           <i class="fas fa-copy"></i>
         </button>
-        <pre style="text-align: left; border-radius: 8px;"><code id="bibtexInfo">@article{Li2025GARF,
+        <pre style="text-align: left; border-radius: 8px;"><code id="bibtexInfo">@article{li2025garf,
  title={GARF: Learning Generalizable 3D Reassembly for Real-World Fractures},
- author={Sihang Li and Zeyu Jiang and Grace Chen and Chenyang Xu and Siqi Tan and Xue Wang and Irving Fang and Kristof Zyskowski and Shannon McPherron and Radu Iovita and Chen Feng and Jing Zhang},
+ author={Li, Sihang and Jiang, Zeyu and Chen, Grace and Xu, Chenyang and Tan, Siqi and Wang, Xue and Fang, Irving and Zyskowski, Kristof and McPherron, Shannon P and Iovita, Radu and Feng, Chen and Zhang, Jing},
  year={2025},
- journal={arXiv preprint arXiv:2412.00138},
+ journal={arXiv preprint arXiv:2504.05400},
 }</code></pre>
       </div>
     </center>
@@ -808,8 +808,7 @@
 <section class="section" id="Acknowledgements">
   <div class="container is-max-desktop content">
     <h2 class="title">Acknowledgements</h2>
-    We gratefully acknowledge the Physical Anthropology Unit, Universidad Complutense de Madrid for access to curated human skeletons, and Dr. Scott A. Williams (NYU Anthropology Department) for the processed data samples. 
-    This work was supported in part through NSF grants 2152565, 2238968, 2322242, and 2426993, and the NYU IT High Performance Computing resources, services, and staff expertise.
+    We gratefully acknowledge the Physical Anthropology Unit, Universidad Complutense de Madrid for access to curated human skeletons, and Dr. Scott A. Williams (NYU Anthropology Department) for the processed data samples. This work was supported in part through NSF grants 2152565, 2238968, 2322242, and 2426993, and the NYU IT High Performance Computing resources, services, and staff expertise.
   </div>
 </section>
 
